--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
+    <script src="game.js"></script>
+    <noscript>
+      <h1>Scripts not supported</h1>
+    </noscript>
   </head>
   <body>
-    <h1>
-      Hello World!
-    </h1>
+    <div id="title"></div>
+    <div id="scores"></div>
+    <div id="board">
+      <img src="./images/bear.gif" id="bear" alt="bear" />
+    </div>
   </body>
 </html>
