Progressed through lab can move bear

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
+    <script>
+      var bear;
+    </script>
     <script src="game.js"></script>
     <noscript>
       <h1>Scripts not supported</h1>
     </noscript>
   </head>
-  <body>
+  <body onload="start();">
     <div id="title"></div>
     <div id="scores"></div>
     <div id="board">
