--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
       var bear;
+      var bees;
+      var updateTimer;
     </script>
     <script src="game.js"></script>
     <noscript>
@@ -29,7 +31,7 @@
         <input type="text" id="periodTimer" value="10" size="3" /> ms
         <br />
         and the bear's speed
-        <input type="text" id="speedBear" value="100" size="3" /> px/ms
+        <input type="text" id="speedBear" value="10" size="3" /> px/ms
       </p>
       <h2>Press left, right, up, down keys to move the bear</h2>
     </div>
