--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       var bear;
       var bees;
       var updateTimer;
+      //take start time
+      //var?
+      lastStingTime = new Date();
     </script>
     <script src="game.js"></script>
     <noscript>
@@ -39,7 +42,7 @@
       <table>
         <tr>
           <td>
-            <p>Stings: [<span id="duration">?</span>]</p>
+            <p>Stings: [<span id="hits">0</span>]</p>
           </td>
           <td>
             <p>Best duration: [<span id="duration">?</span>]</p>
